QA-5428 - Product naming change - Installer
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@909 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
@@ -16,7 +16,7 @@ UserInputPanel.headline.externalizedConfig=Externalisierte Konfiguration (option
 UserInputPanel.headline.installType=Installationstyp
 UserInputPanel.headline.ldap=LDAP Provider Konfiguration
 UserInputPanel.headline.mailSettings=Mail-Einstellungen (optional)
-UserInputPanel.headline.operatingMode=Jahia Betriebsart
+UserInputPanel.headline.operatingMode=${product.name} Betriebsart
 UserInputPanel.headline.serverType=Anwendungsserver
 UserInputPanel.headline.studioToolSettings=Studio-Tools
 UserInputPanel.headline.superUser=Administrator (root) Einstellungen
@@ -25,7 +25,7 @@ dbSettings.connection.error.lowercasetablenames=lower_case_table_names soll zu 1
 dbSettings.connection.error.maxallowedpackets=max_allowed_packet (MySQL-Server Konfiguration) ist zu niedrig. Der Wert soll mindestens 100M sein.
 eUserInputPanel.headline.externalToolSettings=Dokumenten-Management-Tools
 installer.madewith=© 2002-2014 - Jahia Solutions Group SA
-installer.reversetitle=${product.name} Installation Wizard
+installer.reversetitle=Jahia Installation Tool: ${product.name} - Community Distribution
 jahia.cleanup=Cleanup
-jahia.configuring=Konfigurieren Jahia (kann einige Minuten dauern)
-uninstaller.title=Deinstallation von ${product.name} Community Edition
+jahia.configuring=Konfigurieren ${product.name} (kann einige Minuten dauern)
+uninstaller.title=Deinstallation von ${product.name} - Community Distribution
