--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_fr.properties
@@ -16,7 +16,7 @@ UserInputPanel.headline.externalizedConfig=Configuration externalisée (optionnel
 UserInputPanel.headline.installType=Type d'installation
 UserInputPanel.headline.ldap=Configuration LDAP
 UserInputPanel.headline.mailSettings=Configuration du mail (optionnelle)
-UserInputPanel.headline.operatingMode=Mode d'installation Jahia
+UserInputPanel.headline.operatingMode=Mode d'installation ${product.name}
 UserInputPanel.headline.serverType=Sélectionnez le serveur d'application cible
 UserInputPanel.headline.superUser=Configuration de l'administrateur (root)
 dbSettings.connection.error=Une erreur s'est produite durant la tentative de connexion à la base
@@ -24,7 +24,7 @@ dbSettings.connection.error.lowercasetablenames=You must set lower_case_table_na
 dbSettings.connection.error.maxallowedpackets=Value for max_allowed_packet is not enough, should be at least 100M
 eUserInputPanel.headline.externalToolSettings=Outils de gestion de documents
 installer.madewith=© 2002-2014 - Jahia Solutions Group SA
-installer.reversetitle=Assistant d'installation de ${product.name}
+installer.reversetitle=Jahia Installation Tool: ${product.name} - Community Distribution
 jahia.cleanup=Nettoyage
-jahia.configuring=Configuration de Jahia en cours (ceci peut durer un certain temps):
-uninstaller.title=Désinstallation de ${product.name} Community Edition
+jahia.configuring=Configuration de ${product.name} en cours (ceci peut durer un certain temps):
+uninstaller.title=Désinstallation de ${product.name} - Community Distribution
