--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
@@ -1,6 +1,6 @@
 afterInstall.description=Installation erfolgreich
 afterInstall.launchJahia=Web-Browser starten wenn der Server gestartet ist
-afterInstall.startTomcat=Jahia Server starten
+afterInstall.startTomcat=Digital Factory Server starten
 afterInstall.title=Installation
 afterInstall.viewHowToInstall=Installationsanleitung öffnen
 appServer.ajpPort=AJP Connector Port (*)
@@ -10,16 +10,16 @@ appServer.contextName.validator=Der Webanwendung Kontext Name sollte eine gültig
 appServer.developmentMode=Entwicklungsmodus für die Vorlagen aktiviern?
 appServer.httpPort=HTTP Connector Port (*)
 appServer.httpPort.validator=HTTP Connector Port ist ein Pflichtfeld und sollte eine gültige TCP Port-Nummer enthalten
-appServer.password=Jahia Tool-Manager Passwort (*)
-appServer.password.mandatory=Jahia Tool-Manager Passwort ist ein Pflichtfeld
+appServer.password=Jahia Tools Manager Passwort (*)
+appServer.password.mandatory=Jahia Tools Manager Passwort ist ein Pflichtfeld
 appServer.serverPort=Server Shutdown Port (*)
 appServer.serverPort.validator=Server Shutdown Port ist ein Pflichtfeld und sollte eine gültige TCP Port-Nummer enthalten
 appServer.sslPort=HTTPS Redirect Port (*)
 appServer.sslPort.validator=HTTPS Redirect Port ist ein Pflichtfeld und sollte eine gültige TCP Port-Nummer enthalten
 appServer.title=Webanwendung Konfiguration
 appServer.tomcat.description=Apache Tomcat Konfiguration
-appServer.username=Jahia Tool-Manager Benutzername (*)
-appServer.username.mandatory=Jahia Tool-Manager Benutzername ist ein Pflichtfeld
+appServer.username=Jahia Tools Manager Benutzername (*)
+appServer.username.mandatory=Jahia Tools Manager Benutzername ist ein Pflichtfeld
 appServer.webApp.description=Webanwendung Konfiguration
 common.requiredField=Pflichtfeld
 common.requiredFieldHint=(*) - dies ist ein Pflichtfeld
@@ -47,7 +47,7 @@ installation.title=Installationstyp
 installation.type.advanced=Benutzerdefinierte Installation (fortgeschritten)
 installation.type.express=Schnellinstallation
 installation.type1=Hier können Sie Ihre bevorzugte Art der Installation wählen.
-installation.type2=Schnellinstallation führt das übliche Jahia Setup mit dem Apache Tomcat 7.0 Server und der Embedded Sun Java DB / Apache Derby Datenbank aus, während die benutzerdefinierte Installation die erweiterte Konfiguration des Anwendungsservers, der Datenbank und zusätzlichen Optionen ermöglicht:
+installation.type2=Schnellinstallation führt das übliche Digital Factory Setup mit dem Apache Tomcat 7.0 Server und der Embedded Sun Java DB / Apache Derby Datenbank aus, während die benutzerdefinierte Installation die erweiterte Konfiguration des Anwendungsservers, der Datenbank und zusätzlichen Optionen ermöglicht:
 mailSettings.administrator=Mail-Administrator (Empfänger)
 mailSettings.description=Die unten angegebenen Einstellungen sind optional. Lassen Sie diese Felder leer um E-Mail Benachrichtigungen zu unterdrücken. Eine Eingabe dieser Einstellungen wird den E-Mail Benachrichtigungsdienst aktivieren.
 mailSettings.from=E-Mail von (Absender)
