--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_en.properties
@@ -16,7 +16,7 @@ UserInputPanel.headline.externalizedConfig=Externalized configuration (optional)
 UserInputPanel.headline.installType=Installation type
 UserInputPanel.headline.ldap=LDAP provider configuration
 UserInputPanel.headline.mailSettings=Mail settings (optional)
-UserInputPanel.headline.operatingMode=Jahia operating mode
+UserInputPanel.headline.operatingMode=${product.name} operating mode
 UserInputPanel.headline.serverType=Server type
 UserInputPanel.headline.studioToolSettings=Studio Tools
 UserInputPanel.headline.superUser=System administrator (root) settings
@@ -25,7 +25,7 @@ dbSettings.connection.error.lowercasetablenames=You must set lower_case_table_na
 dbSettings.connection.error.maxallowedpackets=Value for max_allowed_packet is not enough, should be at least 100M
 eUserInputPanel.headline.externalToolSettings=Document Management Tools
 installer.madewith=© 2002-2014 - Jahia Solutions Group SA
-installer.reversetitle=${product.name} Installation Wizard
+installer.reversetitle=Jahia Installation Tool: ${product.name} - Community Distribution
 jahia.cleanup=Cleanup
-jahia.configuring=Configuring Jahia (this can take some time):
-uninstaller.title=Uninstallation of ${product.name} Community Edition
+jahia.configuring=Configuring ${product.name} (this can take some time):
+uninstaller.title=Uninstallation of ${product.name} - Community Distribution
