--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_it.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_it.properties
@@ -6,4 +6,4 @@ PacksPanel.info=Scegliere i componenti da installare:
 PacksPanel.tip=Nota: i componenti in grigio sono obbligatori.
 PathInputPanel.noWhitespaces=Non sono consentiti spazi nel percorso di installazione
 installer.madewith=© 2002-2014 - Jahia Solutions Group SA
-uninstaller.title=Disinstallazione di ${product.name} Community Edition
+uninstaller.title=Disinstallazione di ${product.name} - Community Distribution
