--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_de.properties
@@ -1,6 +1,4 @@
-core=Jahia xCM + Jahia Composite Content Platform
-core.description=Jahia Software Suite (nur Anwendungspaket) einschließlich Jahia xCM, Jahia Composite Content Platform, unsere JahiApps und Jahia Studio.
-drivers=JDBC Treiber
-shared=Shared Libraries
+core=Digital Factory + Jahia Core Content Platform
+core.description=Jahia Software Suite (nur Anwendungspaket) einschließlich Digital Factory, Jahia Core Content Platform und, nach ausgewählten Deployment-Optionen, unsere JahiApps, templates, modules und Jahia Studio.
 tomcat=Apache Tomcat - komplettes Installationsverzeichnis erzeugen
-tomcat.description=Deaktivieren Sie diese Option, um ein eigenständiges Anwendungspaket für den Apache Tomcat zu erzeugen. Wenn diese Option aktiviert ist, wird eine vollständige Installation gemacht (Apache Tomcat wird auch mitinstalliert). Ihre persönliche Jahia Software-Suite kann direkt nach der Fertigstellung dieses Installationsassistenten gestartet werden.
+tomcat.description=Deaktivieren Sie diese Option, um ein eigenständiges Anwendungspaket für einen bestimmten Anwendungsserver zu erzeugen. Wenn diese Option aktiviert ist, wird eine vollständige Installation gemacht (Apache Tomcat wird auch mitinstalliert). Ihre persönliche Digital Factory kann direkt nach der Fertigstellung dieses Installationsassistenten gestartet werden.
