--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_en.properties
@@ -1,6 +1,4 @@
-core=Jahia xCM + Jahia Composite Content Platform
-core.description=Jahia software suite (application-only package) including Jahia xCM, Jahia Composite Content Platform, our JahiApps and the Jahia Studio.
-drivers=JDBC Driver
-shared=Shared libraries
+core=Digital Factory + Jahia Core Content Platform
+core.description=Jahia software suite (application-only package) including Digital Factory, Jahia Core Content Platform and, according selected deployment options, our JahiApps, templates, modules and the Jahia Studio.
 tomcat=Add Apache Tomcat - generate a complete installation folder
-tomcat.description=Uncheck this option to generate a standalone application package for Apache Tomcat. When this option is checked, you will have a complete installation folder (including Apache tomcat) and will be able to start your Jahia software suite instance right after the completion of this installation wizard.
+tomcat.description=Uncheck this option to generate a standalone application package for a specific application server. When this option is checked, you will have a complete installation folder (including Apache Tomcat) and will be able to start your personalized Digital Factory instance right after the completion of this installation wizard.
