--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_fr.properties
@@ -1,4 +1,4 @@
-core=Jahia xCM + Jahia Composite Content Platform
-core.description=Suite logicielle Jahia (application seule) incluant Jahia xCM, Jahia Composite Content Platform, nos JahiApps et le Jahia Studio.
-tomcat=Ajouter Apache Tomcat - rÈpertoire d'installation complet
-tomcat.description=DÈsÈlectionner cette option afin de gÈnÈrer un  package ne contenant que l'application seule destinÈe ‡ Apache Tomcat. En cochant cette option, vous obtiendrez un rÈpertoire d'installation complet (incluant Apache Tomcat) et pourrez dÈmarrer votre instance de la suite logicielle Jahia immÈdiatement aprËs la fin de cette assistant d'installation.
+core=Digital Factory + Jahia Core Content Platform
+core.description=Suite logicielle Jahia (application seule) incluant Digital Factory, Jahia Core Content Platform et, selon les options de déploiement sélectionnés nos JahiApps,templates, modules et le Jahia Studio.
+tomcat=Ajouter Apache Tomcat - répertoire d'installation complet
+tomcat.description=Désélectionner cette option afin de générer un  package ne contenant que l'application seule destinée ‡ un serveur d'application précis. En cochant cette option, vous obtiendrez un répertoire d'installation complet (incluant Apache Tomcat) et pourrez démarrer votre instance de Digital Factory immédiatement après la fin de cet assistant d'installation.
