--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
@@ -2,7 +2,7 @@ additionalSettings.defaultLanguageCode=Choose default language, which will be us
 additionalSettings.modulesPath=Path to a folder with additional modules to be deployed
 afterInstall.description=Installation successful
 afterInstall.launchJahia=Launch a Web browser when the server is started
-afterInstall.startTomcat=Start Jahia server
+afterInstall.startTomcat=Start Digital Factory server
 afterInstall.title=Installation
 afterInstall.viewHowToInstall=Open How To Install file
 appServer.ajpPort=AJP connector port (*)
@@ -12,16 +12,16 @@ appServer.contextName.validator=The Web application context name should be a val
 appServer.developmentMode=Use development mode for templates?
 appServer.httpPort=HTTP connector port (*)
 appServer.httpPort.validator=HTTP connector port is a mandatory field and should contain a valid TCP port number
-appServer.password=Jahia tool manager password (*)
-appServer.password.mandatory=Jahia tool manager password is a mandatory field
+appServer.password=Jahia Tools manager password (*)
+appServer.password.mandatory=Jahia Tools manager password is a mandatory field
 appServer.serverPort=Server shutdown port (*)
 appServer.serverPort.validator=Server shutdown port is a mandatory field and should contain a valid TCP port number
 appServer.sslPort=HTTPS redirect port (*)
 appServer.sslPort.validator=HTTPS redirect port is a mandatory field and should contain a valid TCP port number
 appServer.title=Application and server settings
 appServer.tomcat.description=Apache Tomcat configuration
-appServer.username=Jahia tool manager username (*)
-appServer.username.mandatory=Jahia tool manager username is a mandatory field
+appServer.username=Jahia Tools manager username (*)
+appServer.username.mandatory=Jahia Tools manager username is a mandatory field
 appServer.webApp.description=Web application settings
 common.requiredField=This field is required
 common.requiredFieldHint=(*) - this field is required
@@ -59,7 +59,7 @@ installation.title=Installation type
 installation.type.advanced=Custom install (advanced)
 installation.type.express=Express install
 installation.type1=Here you can choose your preferred installation type.
-installation.type2=Express installation completes the common Jahia setup using pre-packaged Apache Tomcat 7.0 server and embedded Sun Java DB / Apache Derby DBMS, whereas the Custom install allows advanced configuration of the target application server, DBMS and addition options:
+installation.type2=Express installation completes the common Digital Factory setup using pre-packaged Apache Tomcat 7.0 server and embedded Sun Java DB / Apache Derby DBMS, whereas the Custom install allows advanced configuration of the target application server, DBMS and addition options:
 mailSettings.administrator=Mail administrator (recipient)
 mailSettings.description=The settings below are optional. Leave them empty to disable e-mail notification. Specifying them will enable the e-mail notification feature.
 mailSettings.from=Mail from (sender)
