--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
@@ -1,6 +1,6 @@
 afterInstall.description=Installation réussie
-afterInstall.launchJahia=Lancer un navigateur après le démarrage de Jahia
-afterInstall.startTomcat=Démarrer le serveur Jahia
+afterInstall.launchJahia=Lancer un navigateur après le démarrage de Digital Factory
+afterInstall.startTomcat=Démarrer le serveur Digital Factory
 afterInstall.title=Installation
 afterInstall.viewHowToInstall=Ouvrez le fichier d'aide à l'installation
 appServer.ajpPort=port de connexion AJP (*)
@@ -47,7 +47,7 @@ installation.title=Type d'installation
 installation.type.advanced=Installation personnalisée (avancée)
 installation.type.express=Installation rapide
 installation.type1=Vous pouvez choisir votre type d'installation préférée.
-installation.type2=L'installation rapide réalise une configuration standard de Jahia en utilisant les éléments suivants: le serveur Apache Tomcat 7.0, la base de donnée Sun Java DB / Apache Derby. L'Installation personnalisée autorise des configurations spécifiques, et laisse notamment le choix d'autres serveurs d'applications et de bases de données.
+installation.type2=L'installation rapide réalise une configuration standard de Digital Factory en utilisant les éléments suivants: le serveur Apache Tomcat 7.0, la base de donnée Sun Java DB / Apache Derby. L'Installation personnalisée autorise des configurations spécifiques, et laisse notamment le choix d'autres serveurs d'applications et de bases de données.
 mailSettings.administrator=Adresse de l'admin (destinataire)
 mailSettings.description=Les réglages ci dessous sont optionnels. Laissez les champs vides pour désactiver les notifications par email.
 mailSettings.from=Adresse d'envoi (expéditeur)
