QA-5726 - change label for Express install to "Discovery install"
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@914 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
@@ -43,11 +43,12 @@ externalizedConfig.activate=Konfiguration externalisieren
 externalizedConfig.description=Jahia unterstützt externalisierte Konfiguration in den JAR-Dateien. Dies ist optional und standardmäßig deaktiviert. Die erzeugte JAR-Datei muss dann im Server-classpath vorhanden sein, also entweder im WEB-INF/lib Verzeichnis oder auf Server-Ebene konfiguriert.
 externalizedConfig.path=Konfiguration-Pfad
 externalizedConfig.title=Externalisierte Konfiguration (optional)
+installation.chooseType=Hier können Sie Ihre bevorzugte Art der Installation wählen:
 installation.title=Installationstyp
 installation.type.advanced=Benutzerdefinierte Installation (fortgeschritten)
+installation.type.advanced.info=<html>Ermöglicht die erweiterte Konfiguration des Anwendungsservers, der Datenbank und zusätzlichen Optionen.</html>
 installation.type.express=Schnellinstallation
-installation.type1=Hier können Sie Ihre bevorzugte Art der Installation wählen.
-installation.type2=Schnellinstallation führt das übliche Digital Factory Setup mit dem Apache Tomcat 7.0 Server und der Embedded Sun Java DB / Apache Derby Datenbank aus, während die benutzerdefinierte Installation die erweiterte Konfiguration des Anwendungsservers, der Datenbank und zusätzlichen Optionen ermöglicht:
+installation.type.express.info=<html>Schnellinstallation führt das übliche Digital Factory Setup mit dem Apache Tomcat 7.0 Server und der Embedded Sun Java DB / Apache Derby Datenbank aus. Eine Reihe von vorkonfigurierten Demo-Web-Projekten ist mit dieser Installation verfügbar damit Sie sofort mit Digital Factory Experience beginnen können.</html>
 mailSettings.administrator=Mail-Administrator (Empfänger)
 mailSettings.description=Die unten angegebenen Einstellungen sind optional. Lassen Sie diese Felder leer um E-Mail Benachrichtigungen zu unterdrücken. Eine Eingabe dieser Einstellungen wird den E-Mail Benachrichtigungsdienst aktivieren.
 mailSettings.from=E-Mail von (Absender)
