--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
@@ -55,11 +55,12 @@ externalizedConfig.activate=Externalize configuration
 externalizedConfig.description=Jahia supports externalized configurations stored in JAR files. This is optional and deactivated by default. The generated JAR file must then be in the server's classpath, so either in WEB-INF/lib or configured at the server level.
 externalizedConfig.path=Configuration path
 externalizedConfig.title=Externalized configuration (optional)
+installation.chooseType=Here you can choose your preferred installation type:
 installation.title=Installation type
 installation.type.advanced=Custom install (advanced)
-installation.type.express=Express install
-installation.type1=Here you can choose your preferred installation type.
-installation.type2=Express installation completes the common Digital Factory setup using pre-packaged Apache Tomcat 7.0 server and embedded Sun Java DB / Apache Derby DBMS, whereas the Custom install allows advanced configuration of the target application server, DBMS and addition options:
+installation.type.advanced.info=<html>Allows advanced configuration of the target application server, DBMS and addition options.</html>
+installation.type.express=Discovery install
+installation.type.express.info=<html>Completes the common Digital Factory setup using pre-packaged Apache Tomcat 7.0 server and embedded Sun Java DB / Apache Derby DBMS. A set of pre-configured demo Web-projects is available with this installation to let you start with Digital Factory experience right away.</html>
 mailSettings.administrator=Mail administrator (recipient)
 mailSettings.description=The settings below are optional. Leave them empty to disable e-mail notification. Specifying them will enable the e-mail notification feature.
 mailSettings.from=Mail from (sender)
