--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
@@ -43,11 +43,12 @@ externalizedConfig.activate=Externalisation activée
 externalizedConfig.description=Jahia offre la possibilité de stocker la configuration dans un fichier JAR. Ceci est optionel et désactivé par défaut. Le JAR doit être positionné dans le classpath du serveur d'application, donc par exemple dans WEB-INF/lib de l'applicatif Jahia ou dans les options du serveur.
 externalizedConfig.path=Répertoire de stockage
 externalizedConfig.title=Configuration externalisée
+installation.chooseType=Vous pouvez choisir votre type d'installation préférée:
 installation.title=Type d'installation
 installation.type.advanced=Installation personnalisée (avancée)
+installation.type.advanced.info=<html>L'Installation personnalisée autorise des configurations spécifiques, et laisse notamment le choix d'autres serveurs d'applications et de bases de données.</html>
 installation.type.express=Installation rapide
-installation.type1=Vous pouvez choisir votre type d'installation préférée.
-installation.type2=L'installation rapide réalise une configuration standard de Digital Factory en utilisant les éléments suivants: le serveur Apache Tomcat 7.0, la base de donnée Sun Java DB / Apache Derby. L'Installation personnalisée autorise des configurations spécifiques, et laisse notamment le choix d'autres serveurs d'applications et de bases de données.
+installation.type.express.info=<html>L'installation rapide réalise une configuration standard de Digital Factory en utilisant les éléments suivants: le serveur Apache Tomcat 7.0, la base de donnée Sun Java DB / Apache Derby.</html>
 mailSettings.administrator=Adresse de l'admin (destinataire)
 mailSettings.description=Les réglages ci dessous sont optionnels. Laissez les champs vides pour désactiver les notifications par email.
 mailSettings.from=Adresse d'envoi (expéditeur)
