QA-5884 - installer / step7 (DB setting) / label modification https://jira.jahia.org/browse/QA-5884
PostgreSQL 8.x/9.x --> PostgreSQL 9.x

git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@917 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
@@ -34,7 +34,7 @@ dbSettings.dbms.title=Configuration SGBD
 dbSettings.dbms.type=Sélectionnez votre type de base
 dbSettings.dbms.type.derby=Sun Java DB / Apache Derby (standalone)
 dbSettings.dbms.type.mysql=MySQL 5.x
-dbSettings.dbms.type.postgresql=PostgreSQL 8.x/9.x
+dbSettings.dbms.type.postgresql=PostgreSQL 9.x
 dbSettings.mode.embedded=Base embarquée Sun Java DB / Apache Derby
 dbSettings.mode.standalone=SGBD autonome
 dbSettings.title=Configuration SGBD
