--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
@@ -34,7 +34,7 @@ dbSettings.dbms.title=Datenbankeinstellungen
 dbSettings.dbms.type=Wählen Sie Ihren Datenbanktyp aus
 dbSettings.dbms.type.derby=Sun Java DB / Apache Derby (Standalone)
 dbSettings.dbms.type.mysql=MySQL 5.x
-dbSettings.dbms.type.postgresql=PostgreSQL 8.x/9.x
+dbSettings.dbms.type.postgresql=PostgreSQL 9.x
 dbSettings.mode.embedded=Embedded Sun Java DB / Apache Derby Datenbank-Engine
 dbSettings.mode.standalone=Standalone DBMS
 dbSettings.title=Datenbankeinstellungen
