--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
@@ -36,7 +36,7 @@ dbSettings.dbms.title=Database connection settings
 dbSettings.dbms.type=Choose your DBMS type
 dbSettings.dbms.type.derby=Sun Java DB / Apache Derby (standalone)
 dbSettings.dbms.type.mysql=MySQL 5.x
-dbSettings.dbms.type.postgresql=PostgreSQL 8.x/9.x
+dbSettings.dbms.type.postgresql=PostgreSQL 9.x
 dbSettings.mode.embedded=Embedded Sun Java DB / Apache Derby database engine
 dbSettings.mode.standalone=Standalone DBMS
 dbSettings.title=Database connection settings
