Adjusted installer file name and texts on the screen for selecting installation type (requested by Elie)
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@920 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
@@ -46,9 +46,9 @@ externalizedConfig.title=Externalisierte Konfiguration (optional)
 installation.chooseType=Hier können Sie Ihre bevorzugte Art der Installation wählen:
 installation.title=Installationstyp
 installation.type.advanced=Benutzerdefinierte Installation (fortgeschritten)
-installation.type.advanced.info=<html>Ermöglicht die erweiterte Konfiguration des Anwendungsservers, der Datenbank und zusätzlichen Optionen.</html>
+installation.type.advanced.info=<html>Installiert Digital Factory nach Ihren Anforderungen und der Zielumgebung (Anwendungsserver und JVM-Einstellungen, Datenbank, usw.)</html>
 installation.type.express=Schnellinstallation
-installation.type.express.info=<html>Schnellinstallation führt das übliche Digital Factory Setup mit dem Apache Tomcat 7.0 Server und der Embedded Sun Java DB / Apache Derby Datenbank aus. Eine Reihe von vorkonfigurierten Demo-Web-Projekten ist mit dieser Installation verfügbar damit Sie sofort mit Digital Factory Experience beginnen können.</html>
+installation.type.express.info=<html>Entdecken Sie Digital Factory ohne spezifischer Konfiguration dank der Installation eines Apache Tomcat 7 Server & Sun Java DB / Apache Derby DBMS-Bundles. Diese Installation beinhaltet auch alle interessanten und verfügbaren Module, Apps und Vorlagen.</html>
 mailSettings.administrator=Mail-Administrator (Empfänger)
 mailSettings.description=Die unten angegebenen Einstellungen sind optional. Lassen Sie diese Felder leer um E-Mail Benachrichtigungen zu unterdrücken. Eine Eingabe dieser Einstellungen wird den E-Mail Benachrichtigungsdienst aktivieren.
 mailSettings.from=E-Mail von (Absender)
