--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
@@ -58,9 +58,9 @@ externalizedConfig.title=Externalized configuration (optional)
 installation.chooseType=Here you can choose your preferred installation type:
 installation.title=Installation type
 installation.type.advanced=Custom install (advanced)
-installation.type.advanced.info=<html>Allows advanced configuration of the target application server, DBMS and addition options.</html>
+installation.type.advanced.info=<html>Install Digital Factory according to your targeted environment (application server and JVM settings, database, etc.)</html>
 installation.type.express=Discovery install
-installation.type.express.info=<html>Completes the common Digital Factory setup using pre-packaged Apache Tomcat 7.0 server and embedded Sun Java DB / Apache Derby DBMS. A set of pre-configured demo Web-projects is available with this installation to let you start with Digital Factory experience right away.</html>
+installation.type.express.info=<html>Discover Digital Factory without specific configuration thanks to the installation of an Apache Tomcat 7 server & Sun Java DB / Apache Derby DBMS bundle. This installation also provides and deploys all interesting and available modules, applications and templates.</html>
 mailSettings.administrator=Mail administrator (recipient)
 mailSettings.description=The settings below are optional. Leave them empty to disable e-mail notification. Specifying them will enable the e-mail notification feature.
 mailSettings.from=Mail from (sender)
