QA-5428 - Product naming change - Installer
French texts adjusted

git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@921 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_fr.properties
@@ -1,4 +1,4 @@
 core=Digital Factory + Jahia Core Content Platform
-core.description=Suite logicielle Jahia (application seule) incluant Digital Factory, Jahia Core Content Platform et, selon les options de déploiement sélectionnés nos JahiApps,templates, modules et le Jahia Studio.
-tomcat=Ajouter Apache Tomcat - répertoire d'installation complet
-tomcat.description=Désélectionner cette option afin de générer un  package ne contenant que l'application seule destinée ‡ un serveur d'application précis. En cochant cette option, vous obtiendrez un répertoire d'installation complet (incluant Apache Tomcat) et pourrez démarrer votre instance de Digital Factory immédiatement après la fin de cet assistant d'installation.
+core.description=Suite logicielle Jahia (application seule) incluant Digital Factory, Jahia Core Content Platform et, selon les options de dÈploiement sÈlectionnÈes nos JahiApps, templates, modules et le Jahia Studio.
+tomcat=Ajouter Apache Tomcat - rÈpertoire d'installation complet
+tomcat.description=DÈsÈlectionner cette option afin de gÈnÈrer un package ne contenant que l'application seule destinÈe ‡ un serveur d'application prÈcis. En cochant cette option, vous obtiendrez un rÈpertoire d'installation complet (incluant Apache Tomcat) et pourrez dÈmarrer votre instance de Digital Factory immÈdiatement aprËs la fin de cet assistant d'installation.
