--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
@@ -46,9 +46,9 @@ externalizedConfig.title=Configuration externalisée
 installation.chooseType=Vous pouvez choisir votre type d'installation préférée:
 installation.title=Type d'installation
 installation.type.advanced=Installation personnalisée (avancée)
-installation.type.advanced.info=<html>L'Installation personnalisée autorise des configurations spécifiques, et laisse notamment le choix d'autres serveurs d'applications et de bases de données.</html>
-installation.type.express=Installation rapide
-installation.type.express.info=<html>L'installation rapide réalise une configuration standard de Digital Factory en utilisant les éléments suivants: le serveur Apache Tomcat 7.0, la base de donnée Sun Java DB / Apache Derby.</html>
+installation.type.advanced.info=<html>Déployez Digital Factory selon votre environnement cible (paramétrage du serveur d'application, de la base de données, de la JVM etc.)</html>
+installation.type.express=Découvrez Digital Factory
+installation.type.express.info=<html>Déployez Digital Factory sans configuration particulière grace à l'installation d'un package regroupant un serveur Apache Tomcat 7 ainsi qu'une base de données Sun Java DB / Apache Derby. Cette installation installe également tous les modules, applications et templates existants et présentant un intérêt fonctionnel dans ce cadre.</html>
 mailSettings.administrator=Adresse de l'admin (destinataire)
 mailSettings.description=Les réglages ci dessous sont optionnels. Laissez les champs vides pour désactiver les notifications par email.
 mailSettings.from=Adresse d'envoi (expéditeur)
