BACKLOG-5115 - Ported all changes, related to the externalization of the data and configuration, to community installer (merged from jahia_pack/branches/JAHIA-7-0-X-X-BRANCH revision 1033)
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1034 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
@@ -12,7 +12,7 @@ UserInputPanel.headline.dbMode=Datenbankeinstellungen
 UserInputPanel.headline.dbSettings=Datenbankeinstellungen
 UserInputPanel.headline.dbType=Datenbankeinstellungen
 UserInputPanel.headline.externalToolSettings=Dokumenten-Management-Tools
-UserInputPanel.headline.externalizedConfig=Externalisierte Konfiguration (optional)
+UserInputPanel.headline.externalizedConfig=Runtime-Daten und Konfiguration
 UserInputPanel.headline.installType=Installationstyp
 UserInputPanel.headline.ldap=LDAP Provider Konfiguration
 UserInputPanel.headline.mailSettings=Mail-Einstellungen (optional)
