--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_en.properties
@@ -12,7 +12,7 @@ UserInputPanel.headline.dbMode=Database connection settings
 UserInputPanel.headline.dbSettings=Database connection settings
 UserInputPanel.headline.dbType=Database connection settings
 UserInputPanel.headline.externalToolSettings=Document Management Tools
-UserInputPanel.headline.externalizedConfig=Externalized configuration (optional)
+UserInputPanel.headline.externalizedConfig=Runtime data and configuration
 UserInputPanel.headline.installType=Installation type
 UserInputPanel.headline.ldap=LDAP provider configuration
 UserInputPanel.headline.mailSettings=Mail settings (optional)
