--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_fr.properties
@@ -12,7 +12,7 @@ UserInputPanel.headline.dbMode=Configuration SGBD
 UserInputPanel.headline.dbSettings=Configuration SGBD
 UserInputPanel.headline.dbType=Configuration SGBD
 UserInputPanel.headline.externalToolSettings=Outils de gestion de documents
-UserInputPanel.headline.externalizedConfig=Configuration externalisée (optionnelle)
+UserInputPanel.headline.externalizedConfig=Données d'exécution et la configuration
 UserInputPanel.headline.installType=Type d'installation
 UserInputPanel.headline.ldap=Configuration LDAP
 UserInputPanel.headline.mailSettings=Configuration du mail (optionnelle)
