--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
@@ -39,10 +39,10 @@ dbSettings.mode.embedded=Embedded Sun Java DB / Apache Derby Datenbank-Engine
 dbSettings.mode.standalone=Standalone DBMS
 dbSettings.title=Datenbankeinstellungen
 externalToolSettings.title=Dokumenten-Management-Tools
-externalizedConfig.activate=Konfiguration externalisieren
-externalizedConfig.description=Jahia unterstützt externalisierte Konfiguration in den JAR-Dateien. Dies ist optional und standardmäßig deaktiviert. Die erzeugte JAR-Datei muss dann im Server-classpath vorhanden sein, also entweder im WEB-INF/lib Verzeichnis oder auf Server-Ebene konfiguriert.
 externalizedConfig.path=Konfiguration-Pfad
-externalizedConfig.title=Externalisierte Konfiguration (optional)
+externalizedConfig.title=Runtime-Daten und Konfiguration
+externalizedData.path=Runtime-Daten Pfad
+externalizedDataAndConfig.description=Digital Factory unterstützt externalisierung von Daten (Modules, JCR Repository, Datastore, Indexes etc.) und Konfiguration um die Runtime-Daten und die Konfiguration von der Web Anwendung zu trennen.
 installation.chooseType=Hier können Sie Ihre bevorzugte Art der Installation wählen:
 installation.title=Installationstyp
 installation.type.advanced=Benutzerdefinierte Installation (fortgeschritten)
