--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
@@ -51,10 +51,10 @@ dmConfig.pdf2swf.description=Select the pdf2swf executable file
 dmConfig.pdf2swf.notInstalled=pdf2swf is not installed at the given location
 dmConfig.validate.settings=Validate settings
 externalToolSettings.title=Document Management Tools
-externalizedConfig.activate=Externalize configuration
-externalizedConfig.description=Jahia supports externalized configurations stored in JAR files. This is optional and deactivated by default. The generated JAR file must then be in the server's classpath, so either in WEB-INF/lib or configured at the server level.
 externalizedConfig.path=Configuration path
-externalizedConfig.title=Externalized configuration (optional)
+externalizedConfig.title=Runtime data and configuration
+externalizedData.path=Runtime data path
+externalizedDataAndConfig.description=Digital Factory implies externalization of data (modules, JCR repository, file datastore, indexes etc.) and configuration to separate runtime data and configuration from the Web application.
 installation.chooseType=Here you can choose your preferred installation type:
 installation.title=Installation type
 installation.type.advanced=Custom install (advanced)
