--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
@@ -39,10 +39,9 @@ dbSettings.mode.embedded=Base embarquée Sun Java DB / Apache Derby
 dbSettings.mode.standalone=SGBD autonome
 dbSettings.title=Configuration SGBD
 externalToolSettings.title=Outils de gestion de documents
-externalizedConfig.activate=Externalisation activée
-externalizedConfig.description=Jahia offre la possibilité de stocker la configuration dans un fichier JAR. Ceci est optionel et désactivé par défaut. Le JAR doit être positionné dans le classpath du serveur d'application, donc par exemple dans WEB-INF/lib de l'applicatif Jahia ou dans les options du serveur.
 externalizedConfig.path=Répertoire de stockage
-externalizedConfig.title=Configuration externalisée
+externalizedConfig.title=Données d'exécution et la configuration
+externalizedData.path=Répertoire de données d'exécution
 installation.chooseType=Vous pouvez choisir votre type d'installation préférée:
 installation.title=Type d'installation
 installation.type.advanced=Installation personnalisée (avancée)
