QA-6768 - Adjusted label for configuration path to "R?\195?\169pertoire de configuration" (merged from jahia_pack/branches/JAHIA-7-0-X-X-BRANCH revision 1077)
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1078 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
@@ -39,7 +39,7 @@ dbSettings.mode.embedded=Base embarquée Sun Java DB / Apache Derby
 dbSettings.mode.standalone=SGBD autonome
 dbSettings.title=Configuration SGBD
 externalToolSettings.title=Outils de gestion de documents
-externalizedConfig.path=Répertoire de stockage
+externalizedConfig.path=Répertoire de configuration
 externalizedConfig.title=Données d'exécution et la configuration
 externalizedData.path=Répertoire de données d'exécution
 installation.chooseType=Vous pouvez choisir votre type d'installation préférée:
