QA-7249: Update copyrights dates
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1267 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_en.properties
@@ -24,7 +24,7 @@ dbSettings.connection.error=An error occurred while establishing the connection 
 dbSettings.connection.error.lowercasetablenames=You must set lower_case_table_names to 1 with this version of MySQL (>=5.5.9 and <=5.5.12)
 dbSettings.connection.error.maxallowedpackets=Value for max_allowed_packet is not enough, should be at least 100M
 eUserInputPanel.headline.externalToolSettings=Document Management Tools
-installer.madewith=© 2002-2014 - Jahia Solutions Group SA
+installer.madewith=ï¿½ 2002-2015 - Jahia Solutions Group SA
 installer.reversetitle=Jahia Installation Tool: ${product.name} - Community Distribution
 jahia.cleanup=Cleanup
 jahia.configuring=Configuring ${product.name} (this can take some time):
