--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_fr.properties
@@ -1,30 +1,30 @@
 AntAction.pack=Traitement des actions Ant
 CustomActions.progress=Progression de la configuration globale :
-CustomActions.tip=La configuration est en cours d'exécution
-PacksPanel.dependencyList=Les modules selectionnés nécessitent également les suivants :
+CustomActions.tip=La configuration est en cours d'exï¿½cution
+PacksPanel.dependencyList=Les modules selectionnï¿½s nï¿½cessitent ï¿½galement les suivants :
 PacksPanel.info=Choisissez le type d'installation que vous souhaitez mettre en oeuvre :
-PacksPanel.tip=Note : les modules grisés ne sont pas optionnels.
-PathInputPanel.noWhitespaces=Les espaces ne sont pas autorisés dans le chemin d'installation
-UserInputPanel.headline.additionalSettings=Paramètres supplémentaires
+PacksPanel.tip=Note : les modules grisï¿½s ne sont pas optionnels.
+PathInputPanel.noWhitespaces=Les espaces ne sont pas autorisï¿½s dans le chemin d'installation
+UserInputPanel.headline.additionalSettings=Paramï¿½tres supplï¿½mentaires
 UserInputPanel.headline.afterInstall=Installation
-UserInputPanel.headline.appServer=Application et paramètres du serveur
+UserInputPanel.headline.appServer=Application et paramï¿½tres du serveur
 UserInputPanel.headline.dbMode=Configuration SGBD
 UserInputPanel.headline.dbSettings=Configuration SGBD
 UserInputPanel.headline.dbType=Configuration SGBD
 UserInputPanel.headline.externalToolSettings=Outils de gestion de documents
-UserInputPanel.headline.externalizedConfig=Données d'exécution et la configuration
+UserInputPanel.headline.externalizedConfig=Donnï¿½es d'exï¿½cution et la configuration
 UserInputPanel.headline.installType=Type d'installation
 UserInputPanel.headline.ldap=Configuration LDAP
 UserInputPanel.headline.mailSettings=Configuration du mail (optionnelle)
 UserInputPanel.headline.operatingMode=Mode d'installation ${product.name}
-UserInputPanel.headline.serverType=Sélectionnez le serveur d'application cible
+UserInputPanel.headline.serverType=Sï¿½lectionnez le serveur d'application cible
 UserInputPanel.headline.superUser=Configuration de l'administrateur (root)
-dbSettings.connection.error=Une erreur s'est produite durant la tentative de connexion à la base
+dbSettings.connection.error=Une erreur s'est produite durant la tentative de connexion ï¿½ la base
 dbSettings.connection.error.lowercasetablenames=You must set lower_case_table_names to 1 with this version of MySQL (>=5.5.9 and <=5.5.12)
 dbSettings.connection.error.maxallowedpackets=Value for max_allowed_packet is not enough, should be at least 100M
 eUserInputPanel.headline.externalToolSettings=Outils de gestion de documents
-installer.madewith=© 2002-2014 - Jahia Solutions Group SA
+installer.madewith=ï¿½ 2002-2015 - Jahia Solutions Group SA
 installer.reversetitle=Jahia Installation Tool: ${product.name} - Community Distribution
 jahia.cleanup=Nettoyage
 jahia.configuring=Configuration de ${product.name} en cours (ceci peut durer un certain temps):
-uninstaller.title=Désinstallation de ${product.name} - Community Distribution
+uninstaller.title=Dï¿½sinstallation de ${product.name} - Community Distribution
