Fixed broken resource bundle encoding
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1304 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_es.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_es.properties
@@ -1,9 +1,9 @@
 AntAction.pack=Tratamiento de las acciones Ant
-CustomActions.progress=Evoluciï¿½n de la configuraciï¿½n general
-CustomActions.tip=La instalaciï¿½n se estï¿½ ejecutando
+CustomActions.progress=Evolución de la configuración general
+CustomActions.tip=La instalación se está ejecutando
 PacksPanel.dependencyList=El paquete seleccionado necesita los siguientes paquetes para ser instalado
 PacksPanel.info=Seleccione los paquetes que desea instalar:
 PacksPanel.tip=Nota: los paquetes en gris son obligatorios.
-PathInputPanel.noWhitespaces=No se permiten espacios en la ruta de instalaciï¿½n
-installer.madewith=ï¿½ 2002-2015 - Jahia Solutions Group SA
-uninstaller.title=Desinstalaciï¿½n de ${product.name} - Community Distribution
+PathInputPanel.noWhitespaces=No se permiten espacios en la ruta de instalación
+installer.madewith=© 2002-2015 - Jahia Solutions Group SA
+uninstaller.title=Desinstalación de ${product.name} - Community Distribution
