--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_pt.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_pt.properties
@@ -1,9 +1,9 @@
-AntAction.pack=Aï¿½ï¿½es Tratamento Ant
-CustomActions.progress=Andamento da configuraï¿½ï¿½o :
-CustomActions.tip=A instalaï¿½ï¿½o estï¿½ sendo executado
-PacksPanel.dependencyList=O pacote seleccionado apresenta as seguintes dependï¿½ncias e/ou exclusï¿½es
+AntAction.pack=Ações Tratamento Ant
+CustomActions.progress=Andamento da configuração :
+CustomActions.tip=A instalação está sendo executado
+PacksPanel.dependencyList=O pacote seleccionado apresenta as seguintes dependências e/ou exclusões
 PacksPanel.info=Seleccione os pacotes que deseja instalar:
-PacksPanel.tip=Nota: Os pacotes a cinza sï¿½o necessï¿½rios.
-PathInputPanel.noWhitespaces=Nï¿½o sï¿½o permitidos espaï¿½os no caminho de instalaï¿½ï¿½o
-installer.madewith=ï¿½ 2002-2015 - Jahia Solutions Group SA
-uninstaller.title=Desinstalaï¿½ï¿½o de ${product.name} - Community Distribution
+PacksPanel.tip=Nota: Os pacotes a cinza são necessários.
+PathInputPanel.noWhitespaces=Não são permitidos espaços no caminho de instalação
+installer.madewith=© 2002-2015 - Jahia Solutions Group SA
+uninstaller.title=Desinstalação de ${product.name} - Community Distribution
