--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_de.properties
@@ -1,9 +1,9 @@
-AntAction.pack=Ausfï¿½hrung von Konfigurationsaktionen
+AntAction.pack=Ausführung von Konfigurationsaktionen
 CustomActions.progress=Konfigurationsfortschritt gesamt:
 CustomActions.tip=Konfigurationsfortschritt der Aktion:
-PacksPanel.dependencyList=Das Paket hat folgende Abhï¿½ngigkeiten und/oder Ausschlï¿½sse:
-PacksPanel.info=Bitte wï¿½hlen Sie hier den Installationstyp aus:
-PacksPanel.tip=Hinweis: Die grau markierten Pakete kï¿½nnen nicht optional ausgewï¿½hlt werden.
+PacksPanel.dependencyList=Das Paket hat folgende Abhängigkeiten und/oder Ausschlüsse:
+PacksPanel.info=Bitte wählen Sie hier den Installationstyp aus:
+PacksPanel.tip=Hinweis: Die grau markierten Pakete können nicht optional ausgewählt werden.
 PathInputPanel.noWhitespaces=Der Pfad darf keine Leerzeihen enthalten.
 UserInputPanel.headline.additionalSettings=Weitere Einstellungen
 UserInputPanel.headline.afterInstall=Installation
@@ -24,7 +24,7 @@ dbSettings.connection.error=Ein Fehler ist aufgetretten beim Herstellen der Verb
 dbSettings.connection.error.lowercasetablenames=lower_case_table_names soll zu 1 gesetzt werden mit dieser Version von MySQL (>=5.5.9 and <=5.5.12)
 dbSettings.connection.error.maxallowedpackets=max_allowed_packet (MySQL-Server Konfiguration) ist zu niedrig. Der Wert soll mindestens 100M sein.
 eUserInputPanel.headline.externalToolSettings=Dokumenten-Management-Tools
-installer.madewith=ï¿½ 2002-2015 - Jahia Solutions Group SA
+installer.madewith=© 2002-2015 - Jahia Solutions Group SA
 installer.reversetitle=Jahia Installation Tool: ${product.name} - Community Distribution
 jahia.cleanup=Cleanup
 jahia.configuring=Konfigurieren ${product.name} (kann einige Minuten dauern)
