--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_it.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/customLang_it.properties
@@ -1,9 +1,9 @@
 AntAction.pack=Trattamento azioni Ant
 CustomActions.progress=Nell'insieme, i progressi di configurazione :
-CustomActions.tip=L'installazione ï¿½ in esecuzione
+CustomActions.tip=L'installazione è in esecuzione
 PacksPanel.dependencyList=Il componente selezionato ha le seguenti dipendenze e/o esclusioni
 PacksPanel.info=Scegliere i componenti da installare:
 PacksPanel.tip=Nota: i componenti in grigio sono obbligatori.
 PathInputPanel.noWhitespaces=Non sono consentiti spazi nel percorso di installazione
-installer.madewith=ï¿½ 2002-2015 - Jahia Solutions Group SA
+installer.madewith=© 2002-2015 - Jahia Solutions Group SA
 uninstaller.title=Disinstallazione di ${product.name} - Community Distribution
