BACKLOG-6092 : Installers: labels
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA-7-1-X-X-BRANCH@1511 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_en.properties
@@ -1,4 +1,4 @@
-core=Digital Factory + Jahia Core Content Platform
-core.description=Jahia software suite (application-only package) including Digital Factory, Jahia Core Content Platform and, according selected deployment options, our JahiApps, templates, modules and the Jahia Studio.
+core=Digital Experience Manager + Jahia Core Content Platform
+core.description=Jahia software suite (application-only package) including Digital Experience Manager, Jahia Core Content Platform and, according selected deployment options, our JahiApps, templates, modules and the Jahia Studio.
 tomcat=Add Apache Tomcat - generate a complete installation folder
-tomcat.description=Uncheck this option to generate a standalone application package for a specific application server. When this option is checked, you will have a complete installation folder (including Apache Tomcat) and will be able to start your personalized Digital Factory instance right after the completion of this installation wizard.
+tomcat.description=Uncheck this option to generate a standalone application package for a specific application server. When this option is checked, you will have a complete installation folder (including Apache Tomcat) and will be able to start your personalized Digital Experience Manager instance right after the completion of this installation wizard.
