--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
@@ -2,7 +2,7 @@ additionalSettings.defaultLanguageCode=Choose default language, which will be us
 additionalSettings.modulesPath=Path to a folder with additional modules to be deployed
 afterInstall.description=Installation successful
 afterInstall.launchJahia=Launch a Web browser when the server is started
-afterInstall.startTomcat=Start Digital Factory server
+afterInstall.startTomcat=Start Digital Experience Manager server
 afterInstall.title=Installation
 afterInstall.viewHowToInstall=Open How To Install file
 appServer.ajpPort=AJP connector port (*)
@@ -54,13 +54,13 @@ externalToolSettings.title=Document Management Tools
 externalizedConfig.path=Configuration path
 externalizedConfig.title=Runtime data and configuration
 externalizedData.path=Runtime data path
-externalizedDataAndConfig.description=Digital Factory implies externalization of data (modules, JCR repository, file datastore, indexes etc.) and configuration to separate runtime data and configuration from the Web application.
+externalizedDataAndConfig.description=Digital Experience Manager implies externalization of data (modules, JCR repository, file datastore, indexes etc.) and configuration to separate runtime data and configuration from the Web application.
 installation.chooseType=Here you can choose your preferred installation type:
 installation.title=Installation type
 installation.type.advanced=Custom install (advanced)
-installation.type.advanced.info=<html>Install Digital Factory according to your targeted environment (application server and JVM settings, database, etc.)</html>
+installation.type.advanced.info=<html>Install Digital Experience Manager according to your targeted environment (application server and JVM settings, database, etc.)</html>
 installation.type.express=Discovery install
-installation.type.express.info=<html>Discover Digital Factory without specific configuration thanks to the installation of an Apache Tomcat 8 server & Sun Java DB / Apache Derby DBMS bundle. This installation also provides and deploys all interesting and available modules, applications and templates.</html>
+installation.type.express.info=<html>Discover Digital Experience Manager without specific configuration thanks to the installation of an Apache Tomcat 8 server & Sun Java DB / Apache Derby DBMS bundle. This installation also provides and deploys all interesting and available modules, applications and templates.</html>
 mailSettings.administrator=Mail administrator (recipient)
 mailSettings.description=The settings below are optional. Leave them empty to disable e-mail notification. Specifying them will enable the e-mail notification feature.
 mailSettings.from=Mail from (sender)
