--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/packsLang_de.properties
@@ -1,4 +1,4 @@
 core=Digital Experience Manager + Jahia Core Content Platform
 core.description=Jahia Software Suite (nur Anwendungspaket) einschließlich Digital Experience Manager, Jahia Core Content Platform und, nach ausgewählten Deployment-Optionen, unsere JahiApps, templates, modules und Jahia Studio.
 tomcat=Apache Tomcat - komplettes Installationsverzeichnis erzeugen
-tomcat.description=Deaktivieren Sie diese Option, um ein eigenständiges Anwendungspaket für einen bestimmten Anwendungsserver zu erzeugen. Wenn diese Option aktiviert ist, wird eine vollständige Installation gemacht (Apache Tomcat wird auch mitinstalliert). Ihre persönliche Digital Experience Manager kann direkt nach der Fertigstellung dieses Installationsassistenten gestartet werden.
+tomcat.description=Deaktivieren Sie diese Option, um ein eigenständiges Anwendungspaket für einen bestimmten Anwendungsserver zu erzeugen. Wenn diese Option aktiviert ist, wird eine vollständige Installation gemacht (Apache Tomcat wird auch mitinstalliert). Ihre persönliche Digital Experience Manager Instanz kann direkt nach der Fertigstellung dieses Installationsassistenten gestartet werden.
