--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
@@ -49,6 +49,8 @@ installation.type.advanced=Benutzerdefinierte Installation (fortgeschritten)
 installation.type.advanced.info=<html>Installiert Digital Experience Manager nach Ihren Anforderungen und der Zielumgebung (Anwendungsserver und JVM-Einstellungen, Datenbank, usw.)</html>
 installation.type.express=Schnellinstallation
 installation.type.express.info=<html>Entdecken Sie Digital Experience Manager ohne spezifischer Konfiguration dank der Installation eines Apache Tomcat 8 Server & Sun Java DB / Apache Derby DBMS-Bundles. Diese Installation beinhaltet auch alle interessanten und verfügbaren Module, Apps und Vorlagen.</html>
+karaf.remoteShell.port=SSH Console Port (*)
+karaf.remoteShell.port.validator=SSH Console Port ist ein Pflichtfeld und sollte eine gültige TCP Port-Nummer enthalten
 mailSettings.administrator=Mail-Administrator (Empfänger)
 mailSettings.description=Die unten angegebenen Einstellungen sind optional. Lassen Sie diese Felder leer um E-Mail Benachrichtigungen zu unterdrücken. Eine Eingabe dieser Einstellungen wird den E-Mail Benachrichtigungsdienst aktivieren.
 mailSettings.from=E-Mail von (Absender)
