--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
@@ -49,7 +49,7 @@ installation.type.advanced.info=<html>Déployez Digital Experience Manager selon 
 installation.type.express=Découvrez Digital Experience Manager
 installation.type.express.info=<html>Déployez Digital Experience Manager sans configuration particulière grace à l'installation d'un package regroupant un serveur Apache Tomcat 8 ainsi qu'une base de données Sun Java DB / Apache Derby. Cette installation installe également tous les modules, applications et templates existants et présentant un intérêt fonctionnel dans ce cadre.</html>
 karaf.remoteShell.port=Port de console SSH (*)
-karaf.remoteShell.port.validator=Le port de console SSH est obligatoire et doit comporter un port TCP valide
+karaf.remoteShell.port.validator=Le port de console SSH est obligatoire et doit être un port TCP valide
 mailSettings.administrator=Adresse de l'admin (destinataire)
 mailSettings.description=Les réglages ci dessous sont optionnels. Laissez les champs vides pour désactiver les notifications par email.
 mailSettings.from=Adresse d'envoi (expéditeur)
