BACKLOG-8396, BACKLOG-8391: add MariaDB option in installers, remove standalone derby option

--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_de.properties
@@ -35,9 +35,11 @@ dbSettings.dbms.type=Wählen Sie Ihren Datenbanktyp aus
 dbSettings.dbms.type.derby=Sun Java DB / Apache Derby (Standalone)
 dbSettings.dbms.type.mysql=MySQL 5.x
 dbSettings.dbms.type.postgresql=PostgreSQL 9.x
+dbSettings.dbms.type.mariadb=MariaDB 10.x
 dbSettings.mode.embedded=Embedded Sun Java DB / Apache Derby Datenbank-Engine
 dbSettings.mode.standalone=Standalone DBMS
 dbSettings.title=Datenbankeinstellungen
+dbType.mariadb.hint=<html>MariaDB Treiber wird unter der <a href="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html">LGPL Lizenz</a>, version 2.1 oder später, vertrieben. Source Code und Nutzungsbedingungen finden Sie im <a href="${driver.mariadb.download.central}">Maven Central Repository</a></html>
 externalToolSettings.title=Dokumenten-Management-Tools
 externalizedConfig.path=Konfiguration-Pfad
 externalizedConfig.title=Runtime-Daten und Konfiguration
