--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_en.properties
@@ -35,11 +35,13 @@ dbSettings.dbms.storeFilesInDB=Store binary data in the database
 dbSettings.dbms.title=Database connection settings
 dbSettings.dbms.type=Choose your DBMS type
 dbSettings.dbms.type.derby=Sun Java DB / Apache Derby (standalone)
+dbSettings.dbms.type.mariadb=MariaDB 10.x
 dbSettings.dbms.type.mysql=MySQL 5.x
 dbSettings.dbms.type.postgresql=PostgreSQL 9.x
 dbSettings.mode.embedded=Embedded Sun Java DB / Apache Derby database engine
 dbSettings.mode.standalone=Standalone DBMS
 dbSettings.title=Database connection settings
+dbType.mariadb.hint=<html>The MariaDB driver is distributed under the <a href="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html">LGPL license</a>, version 2.1 or later. The source code and the terms of use could be found in <a href="${driver.mariadb.download.central}">Maven Central Repository</a></html>
 dmConfig.description=Document Management experience can be smoother if you have those external tools installed.
 dmConfig.imagemagick.description=Select the base path for your ImageMagick install
 dmConfig.imagemagick.notInstalled=ImageMagick is not installed (correctly) at the given location. You have to select the base path of ImageMagick.
