--- a/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/i18n/userInputLang_fr.properties
@@ -33,11 +33,13 @@ dbSettings.dbms.storeFilesInDB=Stockage des binaires dans la base
 dbSettings.dbms.title=Configuration SGBD
 dbSettings.dbms.type=Sélectionnez votre type de base
 dbSettings.dbms.type.derby=Sun Java DB / Apache Derby (standalone)
+dbSettings.dbms.type.mariadb=MariaDB 10.x
 dbSettings.dbms.type.mysql=MySQL 5.x
 dbSettings.dbms.type.postgresql=PostgreSQL 9.x
 dbSettings.mode.embedded=Base embarquée Sun Java DB / Apache Derby
 dbSettings.mode.standalone=SGBD autonome
 dbSettings.title=Configuration SGBD
+dbType.mariadb.hint=<html>Le pilote MariaDB est distribué sous la <a href="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html">licence LGPL</a>, version 2.1 ou ultérieure. Le code source et les conditions d'utilisation peuvent être trouvés dans <a href="${driver.mariadb.download.central}">Maven Central Repository</a></html>
 externalToolSettings.title=Outils de gestion de documents
 externalizedConfig.path=Répertoire de configuration
 externalizedConfig.title=Données d'exécution et la configuration
